--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-git",
+  "name": "generator-package-json",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
