--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
   "name": "generator-package-json",
   "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
-  "author": "Charlie Jackson",
+  "description": "Yeoman generator for creating a package.json file",
+  "author": "Charlie Jackson <contact@charliejackson.com> (https://charliejackson.com)",
   "license": "MIT",
   "keywords": [
-    "javascript",
-    "yeoman-generator"
+    "yeoman-generator",
+    "yeoman",
+    "javascript"
   ],
   "files": [
     "generators"
   ],
-  "dependencies": {
-    "yeoman-generator": "1.1.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cajacko/generator-package-json.git"
   },
+  "homepage": "https://github.com/cajacko/generator-package-json#readme",
   "scripts": {
     "lint": "eslint **/*.js",
-    "eslint": "eslint"
+    "eslint": "eslint",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
-  "devDependencies": {
-    "eslint": "3.15.0",
+  "engine": {
+    "node": ">=6.9.1"
+  },
+  "bugs": {
+    "url": "https://github.com/cajacko/generator-package-json/issues",
+    "email": "contact@charliejackson.com"
+  },
+  "main": "index.js",
+  "dependencies": {
+    "babel-eslint": "7.1.1",
     "eslint-config-airbnb": "14.1.0",
+    "eslint": "3.15.0",
     "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-react": "6.10.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.0"
-  }
+    "yeoman-generator": "1.1.0"
+  },
+  "devDependencies": {}
 }
